	* drivers/mtd/smart.c:  Return code of smart_scan not checked, can
	  cause success result in failure case, leading to 'dev' pointer being
	  invalid. From Dave dev@ziggurat29.com (2016-04-27).
	* arch/arm/src/stm32l4: Add support for QSPI memory mapped mode. From
	  Dave dev@ziggurat29.com (2016-04-27).
	* configs/stm32l476vg-disco: Add board ioctls for allowing user
	  application to cause QSPI memory mapped mode to be engaged and
	  disengaged.  Also partitioned QSPI flash for file system and other
	 (eventually xip).  From Dave dev@ziggurat29.com (2016-04-27).
	* fs/mount: Fix a backward debug assertion.  Noted by David Sidrane
	  (2016-04-29).
	* arch/arm/src/stm32l4: Add support for HSE and MSI clocks, and auto
	  trim of MSI to LSE (needed for USB).  From Dave dev@ziggurat29.com
	  (2016-04-29).
	* arch/arm/src/stm32l4: Add support for unique id function to arch;
	  modified board to support unique id boardctl.  From Dave
	  dev@ziggurat29.com (2016-05-03).
	* Makefile.unix and tools/mkexport.sh: Pass top-level make to the
	  script to allow -j greater than 1.  From David Sidrane (2016-05-04).
	* arch/arm/src/stm32, sm32f7, stm32l4: Fix typo in variable name in
	  serial BREAK logic.  Review other serial implementations for similar
	  naming problems. (2016-05-05).
	* arch/arm/src/samv7:  Fix typo in MATRIX register definitions.  From
	  Stefan Kolb (2016-05-06).
	* arch/arm/src/stm32l4: Problem with resetting backup domain clears
	  clocking options set up before in *rcc.c use INITS flag to avoid magic
	  reg value to detect power up reset state of RTC correct a problem
	  clearing interrupt flags (they weren't) which prevented an alarm from
	  ever being used more than once per reset cycl.e  From Dave
	  dev@ziggurat29.com (2016-05-07).
	* arch/arm/src/tiva: Fix a bug of GPIO falling-edge interrupt for tiva.
	  From Young (2016-05-07).
	* drivrs/mtd:  Add a driver for SST26F spi/qspi flash devices (SPI mode
	  only).  From Sebastien Lorquet (2016-05-10).