@@ -69,6 +69,7 @@ OBJS = $(AOBJS) $(COBJS)
 BIN = libwireless$(LIBEXT)
 
 all: $(BIN)
+.PHONY: depend clean distclean
 
 $(AOBJS): %$(OBJEXT): %.S
 	$(call ASSEMBLE, $<, $@)
